# Finess-coach-capstone

./: .gitignore  README.md  batch_compute_angles_for_index.py  batch_knn_impute_keypoints.py  benchmark_preprocessing_stgcn.py  benchmark_preprocessing_training.py  biomechanical_features.py  build_egoexo_fitness_index.py  build_exercise_training_index.py  compare_preprocessing_npz.py  comprehensive_pipeline.py  download_egoexo_fitness_dataset.py  download_riccio_kaggle_dataset.py  evaluate_exercise_models.py  evaluate_pose_metrics.py  exercise_bilstm_dataset.py  exercise_bilstm_model.py  exercise_keypoint_window_dataset.py  exercise_label_utils.py  exercise_stgcn_dataset.py  exercise_stgcn_model.py  extract_skeleton_visualizations.py  gcn_pose_dataset.py  gcn_pose_model.py  gcn_pose_topology.py  gym_imu_dataset_features.py  inference_exercise_bilstm.py  inference_gcn_pose_similarity.py  kaggle_exercise_recognition_pipeline.py  keypoint_preprocessing_pipeline.py  knn_skeleton_imputation.py  model_comparison.py  pose_estimation_core.py  pyproject.toml  qevd_dataset_integration.py  quickstart.py  requirements-dataset.txt  requirements.txt  riccio_kaggle_video_pipeline.py  run_full_comparison.py  (+10 more)
.mplcache/: fontlist-v390.json
docs/: CAPSTONE_PIPELINE.md  CAPSTONE_REPORT.md  README.md  export_evaluation_plots.py
fitness_coach/: __init__.py
notebooks/: colab_egoexo_capstone_pipeline.ipynb  colab_final_pipeline.ipynb  colab_gpu_training.ipynb  colab_kaggle_capstone_pipeline.ipynb  exercise_pose_classification_pytorch.ipynb
pipeline/: README.md  regenerate_rich_no_dwt.sh  (+7 more)
(+168 files in other folders)
