[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness-coach"
version = "0.1.0"
description = "Pose estimation, preprocessing, and exercise recognition (capstone)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["fitness_coach*"]
